General cleanup
Signed-off-by: Derek Ho <dxho@amazon.com>